--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ on:
       - '.github/workflows/build.yml'
   workflow_dispatch:
 
+# GitHub Pages 所需权限
 permissions:
   contents: read
   pages: write
@@ -26,23 +27,27 @@ jobs:
       with:
         fetch-depth: 0
 
+    # 安装 TeX Live（含 XeLaTeX 与 ctex 相关宏包）
     - name: Setup TeX Live
       uses: zauguin/install-texlive@v3
       with:
         packages: scheme-full
 
+    # 第一次编译：生成目录与辅助文件
     - name: Compile LaTeX to PDF (Pass 1 - Generate TOC)
       run: |
         echo "🔨 First pass: Building table of contents..."
         xelatex -interaction=nonstopmode -shell-escape lifeguide.tex || true
       continue-on-error: true
 
+    # 第二次编译：生成正确页码的最终 PDF
     - name: Compile LaTeX to PDF (Pass 2 - Final Output)
       run: |
         echo "🔨 Second pass: Building final PDF with correct page numbers..."
         xelatex -interaction=nonstopmode -shell-escape lifeguide.tex || true
       continue-on-error: true
 
+    # 检查 PDF 是否生成成功（失败不阻断后续步骤）
     - name: Check PDF generation
       run: |
         if [ -f lifeguide.pdf ]; then
@@ -53,6 +58,7 @@ jobs:
           exit 0
         fi
 
+    # 可选：使用 tex4ht 生成 HTML（失败不阻断）
     - name: Convert LaTeX to HTML with tex4ht (Optional)
       run: |
         mkdir -p build/html
@@ -65,6 +71,7 @@ jobs:
         fi
       continue-on-error: true
 
+    # 注入自定义 CSS，并把目录提升为侧边栏
     - name: Add HTML styling and sidebar
       run: |
         if [ -d build/html ]; then
@@ -84,18 +91,22 @@ jobs:
           re.DOTALL,
         )
 
-        def ensure_body_class(html):
-          match = re.search(r"<body([^>]*)>", html)
-          if not match:
-            return html
-          attrs = match.group(1)
-          if "class=" in attrs:
-            if "lifeguide-body" in attrs:
+          def ensure_body_class(html):
+            match = re.search(r"<body([^>]*)>", html)
+            if not match:
               return html
-            new_attrs = re.sub(r"class=\"([^"]*)\"", lambda m: f'class="{m.group(1)} lifeguide-body"', attrs)
-          else:
-            new_attrs = attrs + ' class="lifeguide-body"'
-          return html.replace(match.group(0), f"<body{new_attrs}>", 1)
+            attrs = match.group(1)
+            if "class=" in attrs:
+              if "lifeguide-body" in attrs:
+                return html
+              new_attrs = re.sub(
+                r"class=\"([^\"]*)\"",
+                lambda m: "class=\"{} lifeguide-body\"".format(m.group(1)),
+                attrs,
+              )
+            else:
+              new_attrs = attrs + ' class="lifeguide-body"'
+            return html.replace(match.group(0), "<body{}>".format(new_attrs), 1)
 
         def promote_toc(html):
           if "class=\"toc\"" in html:
@@ -116,6 +127,7 @@ jobs:
         PY
         fi
 
+    # 生成静态首页（用于 GitHub Pages 入口）
     - name: Create index.html for GitHub Pages
       run: |
         mkdir -p build
@@ -279,6 +291,7 @@ jobs:
         EOF
         echo "✓ Index page created"
 
+    # 将 PDF 放入发布目录
     - name: Copy PDF to build directory
       run: |
         if [ -f lifeguide.pdf ]; then
@@ -290,11 +303,13 @@ jobs:
         fi
       continue-on-error: true
 
+    # 输出发布目录内容，便于排查
     - name: List build directory contents
       run: |
         echo "📦 Build directory contents:"
         ls -la build/
 
+    # 上传 Pages 构建产物
     - name: Upload Pages artifact
       uses: actions/upload-pages-artifact@v3
       with:
@@ -307,6 +322,7 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
+      # 部署到 GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
