--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -239,7 +239,7 @@ jobs:
               </div>
             </div>
             <div class="footer">
-              <p>Liferguide © 2024-2026 | 吉林大学生命科学学院 | <a href="https://github.com/knight-zmz/Liferguide" style="color: #667eea;">GitHub Repository</a></p>
+              <p>Liferguide © 2024-2026 | 学生物的葫芦娃| 吉林大学生命科学学院 | <a href="https://github.com/knight-zmz/Liferguide" style="color: #667eea;">GitHub Repository</a></p>
               <p>此资料仅供学院内部交流使用，不用于商业用途。</p>
             </div>
           </div>
