fix: add 'web/**' path to build trigger for improved deployment

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,7 @@ on:
     paths:
       - 'lifeguide.tex'
       - 'media/**'
+      - 'web/**'
       - '.github/workflows/build.yml'
   workflow_dispatch:
 
